crates/rome_formatter/tests/specs/prettier/typescript/assignment/parenthesized.ts.snap
---
source: crates/rome_formatter/tests/prettier_tests.rs
assertion_line: 119
expression: parenthesized.ts

---
# Input
```js
// https://github.com/babel/babel/pull/12933/files
(<number>x) = null;
(x!) = null;
(a as any) = null;
(a as number) = 42;
((a as any) as string) = null;

```

# Output
```js
// https://github.com/babel/babel/pull/12933/files
(<number>x) = null;
(x!) = null;
(a as any) = null;
(a as number) = 42;
((a as any) as string) = null;

```

# Errors
```
error[SyntaxError]: Invalid assignment to `<number>x`
  ┌─ parenthesized.ts:2:2
  │
2 │ (<number>x) = null;
  │  ^^^^^^^^^ This expression cannot be assigned to


```


